--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ class: center, middle, inverse
 ## 
 
 BB1000 Programming in Python
+
 KTH
 
 ---
@@ -229,90 +230,132 @@ This file can then be used for further data-mining.
 
 ## Directories
 
-Via `os` the operating system interfaces can be reached.
+The operating system interfaces can be reached via the `os` module.
 
+```python
+import os
 ```
-&gt;&gt;&gt; import os
 
+---
+
+## Directories
+
+The operating system interfaces can be reached via the `os` module.
+
+```python
+import os
 ```
 
-The folder location can be found via
+The location of the current working directory can be found via
 
+```python
+workdir = os.getcwd()
+print(workdir)
 ```
-&gt;&gt;&gt; cwd = os.getcwd()
-&gt;&gt;&gt; print(cwd)
+&lt;pre&gt;
 /mnt/disk/python/Filehandling_2
+&lt;/pre&gt;
 
+---
+
+## Directories
+
+The operating system interfaces can be reached via the `os` module.
+
+```python
+import os
 ```
 
-An extra folder can be created using `makedirs`.
+The location of the current working directory can be found via
+
+```python
+workdir = os.getcwd()
+print(workdir)
+```
+&lt;pre&gt;
+/mnt/disk/python/Filehandling_2
+&lt;/pre&gt;
+
+An extra directory (folder) can be created using `makedirs`.
+
+```python
+datadir = workdir + &#39;/&#39; + &#39;data&#39;
+os.makedirs(datadir)
+```
+
+---
+
+## Directories
+
+The operating system interfaces can be reached via the `os` module.
+
+```python
+import os
+```
+
+The location of the current working directory can be found via
+
+```python
+workdir = os.getcwd()
+print(workdir)
+```
+&lt;pre&gt;
+/mnt/disk/python/Filehandling_2
+&lt;/pre&gt;
+
+An extra directory (folder) can be created using `makedirs`.
+
+```python
+datadir = workdir + &#39;/&#39; + &#39;data&#39;
+os.makedirs(datadir)
+```
+
+However, an error will appear if the directory already exists. We have to check
+the existance of the directory:
 
 ```
-&gt;&gt;&gt; newdir=cwd+&#39;/&#39;+&#39;data&#39;
-&gt;&gt;&gt; os.makedirs(newdir)
-
-```
-
-However, an error will appear when the folder already exists.
-
-&lt;!--
-&gt;&gt;&gt; os.makedirs(newdir)
-
-FileExistsError                           Traceback (most recent call last)
-&lt;ipython-input-10-0698eb90a7e6&gt; in &lt;module&gt;()
-      1 os.makedirs(newdir)
-	        Cannot rely on checking for EEXIST, since the operating system
-
-FileExistsError: [Errno 17] File exists: &#39;/mnt/disk/AA_PC_Stockholm/Education/Python_programming/2018/lectures/Filehandling_2/data&#39;
-
---&gt;
-
-We have to check therefore upon its existance:
-
-```
-&gt;&gt;&gt; if not os.path.exists(newdir):
-...    os.makedirs(newdir)
-
+if not os.path.exists(datadir):
+    os.makedirs(datadir)
 ```
 
 ---
 
 ## Directories 
 
-After creating the directory, we should make sure we put the data there:
+After creating the directory, we write to file `testfile.txt` therein:
 
+```python
+os.chdir(datadir)
+f_test = open(&#39;testfile.txt&#39;, &#39;w&#39;)
+print(&#39;Marie, Maria and Dorothy&#39;, file=f_test)
+f_test.close()
 ```
-&gt;&gt;&gt; os.chdir(newdir)
-&gt;&gt;&gt; try1=open(&#34;testfile.txt&#34;,&#34;w&#34;)
-&gt;&gt;&gt; print(&#39;Pierre, Einstein and Planck&#39;, file=try1)
-&gt;&gt;&gt; try1.close()
 
+---
+
+## Directories 
+
+After creating the directory, we write to file `testfile.txt` therein:
+
+```python
+os.chdir(datadir)
+f_test = open(&#39;testfile.txt&#39;, &#39;w&#39;)
+print(&#39;Marie, Maria and Dorothy&#39;, file=f_test)
+f_test.close()
 ```
 
 We can check now what is the content:
 
 ```
 $ cat testfile.txt
-Pierre, Einstein and Planck
-
-```
-
-A word of precaution here: imagine you run the program a second time. The folder &#39;data&#39; exists already, we do not create a new one and the program continues... and will overwrite the content of &#39;testfile.txt&#39;. 
-
-```
-&gt;&gt;&gt; os.chdir(newdir)
-&gt;&gt;&gt; try1=open(&#34;testfile.txt&#34;,&#34;w&#34;)
-&gt;&gt;&gt; print(&#39;Marie, Maria and Dorothy&#39;, file=try1)
-&gt;&gt;&gt; try1.close()
-
-$ cat testfile.txt
 Marie, Maria and Dorothy
-
 ```
 
-&lt;!--
-Marie Curie, Maria Goppert-Mayer (&#39;nuclear shell structure&#39;, TPA), Dorothy Hodgkin (X-ray of biological structures)
---&gt;
+[Marie Curie](https://en.wikipedia.org/wiki/Marie_Curie)
+
+[Maria Goppert-Mayer](https://en.wikipedia.org/wiki/Maria_Goeppert_Mayer)
+
+[Dorothy Hodgkin](https://en.wikipedia.org/wiki/Dorothy_Hodgkin)
 
 ---
 
@@ -322,112 +365,192 @@ Imagine we have a file &#39;Collaborators&#39; with content
 
 ```
 $ cat Collaborators
-Maria has 4 fte collaborators.
-Marie has 3.5 fte collaborators.
-Dorothy has 2.2 fte collaborators.
-
+Maria has 4 FTE collaborators.
+Marie has 3.5 FTE collaborators.
+Dorothy has 2.2 FTE collaborators.
 ```
 
-Please calculate the full amount of fte collaborators for the three Noble prize winners.
+Our task is to calculate the full amount of FTE collaborators for the three
+Noble prize winners.
 
-It can be noticed that the structure of the three sentences is the same, we should find a way to only take care of the information in between &#39;has&#39; and &#39;fte&#39;.  
+---
 
-First, we have to read in all lines.
+## Searching information in a file
+
+Imagine we have a file &#39;Collaborators&#39; with content
 
 ```
-&gt;&gt;&gt; F=open(&#39;Collaborators&#39;,&#39;r&#39;)
-&gt;&gt;&gt; lines = F.readlines()
-&gt;&gt;&gt; F.close()
+$ cat Collaborators
+Maria has 4 FTE collaborators.
+Marie has 3.5 FTE collaborators.
+Dorothy has 2.2 FTE collaborators.
+```
 
+Our task is to calculate the full amount of FTE collaborators for the three
+Noble prize winners.
+
+Note that the three sentences have the same structures. We should find a way to
+retrieve the information between &#39;has&#39; and &#39;FTE&#39;.  
+
+First, we read in all lines.
+
+```python
+f_dat = open(&#39;Collaborators&#39;, &#39;r&#39;)
+lines = f_dat.readlines()
+f_dat.close()
 ``` 
 
 ---
 
 ## Searching information in a file
 
-With the library `re`, regular expressions can be searched - it can be verified whether they match string patterns in a text. And we initialize the final value...
+Regular expressions are available via the `re` module. They are very useful for
+matching string patterns in a text.
 
-```
-&gt;&gt;&gt; import re
-&gt;&gt;&gt; tot_value=0
-
-```
-
-We will now search through the content of each of the lines in `lines`. We know `lines` is a list and need therefore to run through the index of it.
-
-`re.search` can scan each line: we search in fact each time three words, of which the middle one is unknown and is replaced by parentheses `()`. It can be any character (`.`) and one or more occurrences of that pattern should be taken into account (`+`).  
-
-```
-&gt;&gt;&gt; for i in range(len(lines)):
-...     searched_words= re.search(&#39;has (.+) fte&#39;, lines[i])
-
-```
-
-&lt;!--
-The &#39;r&#39; at the start of the pattern string designates a python &#34;raw&#34; string which passes through backslashes without change.
---&gt;
-
----
-
-## Searching information in a file
-
-`searched_words` is an object which contains the three words. If there is a problem with the matching words [e.g. &#39;has (.+) guf&#39;], then `searched_words` is just `None`. 
-
-&lt;!--
-print(searched_words)
-
-&lt;_sre.SRE_Match object; span=(6, 15), match=&#39;has 4 fte&#39;&gt;
-&lt;_sre.SRE_Match object; span=(6, 17), match=&#39;has 3.5 fte&#39;&gt;
-&lt;_sre.SRE_Match object; span=(8, 19), match=&#39;has 2.2 fte&#39;&gt;
---&gt;
-
-It is therefore possible to build in a check:
-
-```
-...     if searched_words is None:
-...         print(&#39;Error in sentence&#39;)
-...         exit()
-	 
+```python
+import re
 ```
 
 ---
 
 ## Searching information in a file
 
-The first word in `searched_words` can be accessed by using `searched_words.group(0)`. We are however interested in the second word, and have to render it to a number.
+Regular expressions are available via the `re` module. They are very useful for
+matching string patterns in a text.
 
-```
-...     svalue = searched_words.group(1)
-...     value = float(svalue)
-
-```
-
-We only have to add for each line in `lines` the value to the sum of the previous ones:
-
-```
-...     tot_value = tot_value + value
-
+```python
+import re
 ```
 
-And finally the result is
+With `re.search`, the following code searches three words, of
+which the middle one is unknown.
 
++ `.` matches any character
++ `+` matches one or more occurrences of the pattern before it
++ `()` indicates the start and end of a group
+
+```python
+total_amount = 0.0
+
+for line in lines:
+    match = re.search(r&#39;has (.+) FTE&#39;, line)
 ```
-&gt;&gt;&gt; print(tot_value)
+
+---
+
+## Searching information in a file
+
+Regular expressions are available via the `re` module. They are very useful for
+matching string patterns in a text.
+
+```python
+import re
+```
+
+With `re.search`, the following code searches three words, of
+which the middle one is unknown.
+
++ `.` matches any character
++ `+` matches one or more occurrences of the pattern before it
++ `()` indicates the start and end of a group
+
+```python
+total_amount = 0.0
+
+for line in lines:
+    match = re.search(r&#39;has (.+) FTE&#39;, line)
+```
+
+The &#39;r&#39; at the start of the pattern string designates a raw string that treats
+backslashes as literal characters.
+
+---
+
+## Searching information in a file
+
+If the string pattern was successfully found, `re.search` returns an object
+that contains the three words. Otherwise `None` will be returned.
+
+It is therefore possible to check the result of the search:
+
+```python
+    if match is None:
+        print(&#39;String pattern not found in line: &#39; + line)
+```
+
+---
+
+## Searching information in a file
+
+If the string pattern was successfully found, `re.search` returns an object
+that contains the three words. Otherwise `None` will be returned.
+
+It is therefore possible to check the result of the search:
+
+```python
+    if match is None:
+        print(&#39;String pattern not found in line: &#39; + line)
+```
+
+The matched group in `match` is accessible via `match.group(1)`. We need to
+turn it into a floating point number and then add it to `total_amount`.
+
+```python
+    string_value = match.group(1)
+    total_amount += float(string_value)
+```
+
+---
+
+## Searching information in a file
+
+Putting together, the code looks like
+
+```python
+import re
+
+total_amount = 0.0
+
+for line in lines:
+    match = re.search(r&#39;has (.+) FTE&#39;, line)
+
+    if match is None:
+        print(&#39;Information not found!&#39;)
+
+    string_value = match.group(1)
+    total_amount += float(string_value)
+
+print(total_amount)
+```
+
+---
+
+## Searching information in a file
+
+Putting together, the code looks like
+
+```python
+import re
+
+total_amount = 0.0
+
+for line in lines:
+    match = re.search(r&#39;has (.+) FTE&#39;, line)
+
+    if match is None:
+        print(&#39;Information not found!&#39;)
+
+    string_value = match.group(1)
+    total_amount += float(string_value)
+
+print(total_amount)
+```
+
+And the result is
+
+&lt;pre&gt;
 9.7
-
-```
-
-&lt;!--
-&gt;&gt;&gt; for i in range(len(lines)):
-...    searched_words = re.search(&#39;has (.+) fte&#39;, lines[i])
-...    if searched_words is None:
-...       print(&#39;Error in sentence&#39;)
-...       exit()
-...    svalue = searched_words.group(1)
-...    value = float(svalue)
-...    tot_value = tot_value+value
-&gt;&gt;&gt; print(tot_value)
---&gt;
+&lt;/pre&gt;
 
 ---
 
